--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <p>© <span id="year"></span> شركة التوصيلات والسياحة. جميع الحقوق محفوظة.</p>
         <!-- اسم المصمم مع تأثيرات -->
         <div class="inline-block relative">
-          <p class="inline-block bg-gradient-to-r from-pink-500 to-yellow-400 bg-clip-text text-transparent animate-glow">
+          <p class="inline-block bg-gradient-to-r from-orange-500 to-yellow-400 bg-clip-text text-transparent animate-glow font-bold">
             تصميم عبد الرحمن قاطن
           </p>
           <!-- دوائر صغيرة -->
